--- a/manual/README
+++ b/manual/README
@@ -4,3 +4,13 @@ framework from the sources.
 It reads in several header files and writes the output
 to mscore/share/manual.
 
+
+Understood annotations in the source:
+
+      @@ ObjectName
+      @P propertyName propertyType propertyDescription
+
+      Q_INVOKABLE methodDeclaration
+
+
+
