--- a/manual/README
+++ b/manual/README
@@ -10,6 +10,8 @@ Understood annotations in the source:
       @@ ObjectName
       @P propertyName propertyType propertyDescription
 
+      //@ methodDescription
+      //@ ...
       Q_INVOKABLE methodDeclaration
 
 
