more plugin doc updates
Former-commit-id: 6237626b6cb8b02abb08a66effb95103edf94d19

--- a/manual/README
+++ b/manual/README
@@ -2,7 +2,7 @@ This program creates the manual pages for the plugin
 framework from the sources.
 
 It reads in several header files and writes the output
-to mscore/share/manual.
+to mscore/share/manual/plugins/.
 
 
 Understood annotations in the source:
