--- a/manual/README
+++ b/manual/README
@@ -7,6 +7,7 @@ to mscore/share/manual/plugins/.
 
 Understood annotations in the source:
 
+      //@ object description
       @@ ObjectName
       @P propertyName propertyType propertyDescription
 
