update README for plugin manual creation
Former-commit-id: a0d7e9b85b778f1a3db5e2dc05daafba1ddfa3ff

--- a/manual/README
+++ b/manual/README
@@ -9,6 +9,7 @@ Understood annotations in the source:
 
       //@ object description
       @@ ObjectName
+      /// object description
       @P propertyName propertyType propertyDescription
 
       //@ methodDescription
