Adding Serbian language
Former-commit-id: 78e3f041f02a5f098f2218259b2053f9a19d9a85

--- a/share/locale/languages.xml
+++ b/share/locale/languages.xml
@@ -37,6 +37,7 @@
   <language code="pt_BR" name="Português brasileiro" handbook="http://www.musescore.org/pt-br/manual" />
   <language code="ro" name="Română" handbook="http://musescore.org/ro/manual" />
   <language code="ru" name="Русский" handbook="http://www.musescore.org/ru/cправочник" />
+  <language code="sr" name="Српски" />
   <language code="sk" name="Slovenčina" />
   <language code="sl" name="Slovenščina" />
   <language code="sv" name="Svenska" /> 
