Adding Serbian language
Former-commit-id: b4a89237bb529420148e40f50d6407e5ea33cfe2

--- a/share/locale/CMakeLists.txt
+++ b/share/locale/CMakeLists.txt
@@ -58,6 +58,7 @@ install(FILES
       mscore_ru.qm
       mscore_sk.qm
       mscore_sl.qm
+      mscore_sr.qm
       mscore_sv.qm
       mscore_th.qm
       mscore_tr.qm
