--- a/share/locale/languages.xml
+++ b/share/locale/languages.xml
@@ -30,10 +30,11 @@
   <language code="ja" name="Japanese" handbook="http://www.musescore.org/ja/ハンドブック"/>
   <language code="ko" name="한국어" handbook="http://musescore.org/ko/핸드북"/>
   <language code="lt" name="Lietuvių" />
+  <language code="mn_MN" name="Монгол хэл" />
   <language code="nl" name="Nederlands" handbook="http://www.musescore.org/nl/handboek" />
   <language code="nb" name="Norsk" handbook="http://www.musescore.org/nb/håndbok" />
   <language code="pl" name="Polski" handbook="http://www.musescore.org/pl/podręcznik" />
-  <language code="pt" name="Português" handbook="http://www.musescore.org/pt-br/manual" />
+  <language code="pt" name="Português" handbook="http://www.musescore.org/pt-br/maunal" />
   <language code="pt_BR" name="Português brasileiro" handbook="http://www.musescore.org/pt-br/manual" />
   <language code="ro" name="Română" handbook="http://musescore.org/ro/manual" />
   <language code="ru" name="Русский" handbook="http://www.musescore.org/ru/cправочник" />
