fix #23544: New translations loaded via Resource Manager don't override existing ones
Former-commit-id: faf4df8c0b4db16c7eb472c8e2bc9050cd0f24c5

--- a/share/locale/languages.xml
+++ b/share/locale/languages.xml
@@ -34,7 +34,7 @@
   <language code="nl" name="Nederlands" handbook="http://www.musescore.org/nl/handboek" />
   <language code="nb" name="Norsk" handbook="http://www.musescore.org/nb/håndbok" />
   <language code="pl" name="Polski" handbook="http://www.musescore.org/pl/podręcznik" />
-  <language code="pt" name="Português" handbook="http://www.musescore.org/pt-br/maunal" />
+  <language code="pt" name="Português" handbook="http://www.musescore.org/pt-br/manual" />
   <language code="pt_BR" name="Português brasileiro" handbook="http://www.musescore.org/pt-br/manual" />
   <language code="ro" name="Română" handbook="http://musescore.org/ro/manual" />
   <language code="ru" name="Русский" handbook="http://www.musescore.org/ru/cправочник" />
