fix #24219: Add Usbek translation
Former-commit-id: 98e06bbed0accc5c6b68d460efdf912c916c09ed

--- a/share/locale/languages.xml
+++ b/share/locale/languages.xml
@@ -45,6 +45,7 @@
   <language code="th" name="ภาษาไทย" />
   <language code="tr" name="Türkçe" handbook="http://www.musescore.org/tr/kullanım"/>
   <language code="uk" name="Ukrajina" handbook="http://musescore.org/uk/підручник"/>
+  <language code="uz" name="Ozbek tili" />
   <language code="vi" name="Tiếng Việt" />
   <language code="zh_CN" name="简体中文" handbook="http://musescore.org/zh-hans/用户手册"/>
   <language code="zh_TW" name="繁體中文 (台灣)" handbook="http://musescore.org/zh-hans/用户手册"/>
