fix #24219: add Uzbek (latin)
Former-commit-id: 8b5636495161eb5360616da6d09de0672a24c03e

--- a/share/locale/CMakeLists.txt
+++ b/share/locale/CMakeLists.txt
@@ -64,7 +64,7 @@ install(FILES
       mscore_th.qm
       mscore_tr.qm
       mscore_uk.qm
-      mscore_uz.qm
+      mscore_uz@Latn.qm
       mscore_vi.qm
       mscore_zh_CN.qm
       mscore_zh_TW.qm
