fix 25631: add Nynorsk
Former-commit-id: 57da4737095fdbbca184bc90c8cf39557704599a

--- a/share/locale/CMakeLists.txt
+++ b/share/locale/CMakeLists.txt
@@ -52,6 +52,7 @@ install(FILES
       mscore_mn_MN.qm
       mscore_nl.qm
       mscore_nb.qm
+      mscore_nn.qm
       mscore_pl.qm
       mscore_pt.qm
       mscore_pt_BR.qm
